--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   },
   "scripts": {
     "build": "ergogen ./ergogen/ --output ./ergogen/output && ./script/convertdxf.sh",
-    "debug": "ergogen ./ergogen/ --output ./ergogen/output --clear --debug && ./script/convertdxf.sh",
+    "debug": "ergogen ./ergogen/ --output ./ergogen/output --clear --debug",
     "watch:build": "nodemon -e yaml -x \"npm run build\"",
     "watch:debug": "nodemon -e yaml -x \"npm run debug\""
     
