--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "build": "ergogen ./ergogen/ --output ./ergogen/output && ./script/convertdxf.sh",
     "debug": "ergogen ./ergogen/ --output ./ergogen/output --clear --debug",
+    "clear": "rm -rfv ./ergogen/output/*"
     "watch:build": "nodemon -e yaml -x \"npm run build\"",
     "watch:debug": "nodemon -e yaml -x \"npm run debug\""
     
